examples/kubernetes/webui-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teastore
spec:
  hosts:
  - "*"
  gateways:
  - teastore-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: teastore-webui
        port:
          number: 8080
